<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.articleDetails.ArticleDetailsActivity">
    <!-- Half Background-->
    <View
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Back Button-->
    <ImageButton
        android:id="@+id/ibBack"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/bg_circle"
        android:contentDescription="@string/back_button"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintBottom_toBottomOf="@+id/tvScreenTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvScreenTitle"
        app:tint="@color/white" />

    <!-- Screen Title-->
    <TextView
        android:id="@+id/tvScreenTitle"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/article"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/ibFavourite"
        app:layout_constraintStart_toEndOf="@+id/ibBack"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Search Button-->
    <ImageButton
        android:id="@+id/ibFavourite"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/favorite_button"
        android:src="@drawable/baseline_favorite_border_24"
        app:layout_constraintBottom_toBottomOf="@+id/tvScreenTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvScreenTitle"
        app:tint="@color/white" />

    <!-- Article Title -->
    <TextView
        android:id="@+id/tvTitle"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="32dp"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvScreenTitle" />

    <ImageView
        android:id="@+id/ivTime"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="32dp"
        app:layout_constraintTop_toTopOf="@id/tvDate"
        app:layout_constraintBottom_toBottomOf="@id/tvDate"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/baseline_access_time_24"
        app:tint="@color/colorLightGrey"/>
    <!-- Article Date -->
    <TextView
        android:id="@+id/tvDate"
        style="@style/TextAppearance.AppCompat.Caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:textColor="@color/colorLightGrey"
        app:layout_constraintStart_toEndOf="@+id/ivTime"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <!-- Article Body -->
    <TextView
        android:id="@+id/tvBody"
        style="@style/TextAppearance.AppCompat.Body1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:lineSpacingExtra="10sp"
        android:textColor="@color/colorGrey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvImage" />

    <!-- Article Image -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cvImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="24dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintDimensionRatio="16:9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDate">

        <ImageView
            android:id="@+id/ivImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorLightGrey"
            android:contentDescription="@string/article_image"
            android:src="@drawable/placeholder" />
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>